# plover_vlc_commands

./: README.md  README.rst  plover_vlc_commands.py  setup.cfg  setup.py
