[metadata]
name = plover_vlc_commands
version = 0.6.2
description = VLC commands for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_vlc_commands
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev0
        requests
py_modules =
	plover_vlc_commands

[options.entry_points]
plover.command =
	VLC_pause        = plover_vlc_commands:pause
	VLC_rate         = plover_vlc_commands:rate
	VLC_resume       = plover_vlc_commands:resume
	VLC_seek         = plover_vlc_commands:seek
	VLC_stop         = plover_vlc_commands:stop
	VLC_toggle_pause = plover_vlc_commands:toggle_pause

# vim: commentstring=#\ %s list
